# 1mcpserver

./: .dockerignore  .gitignore  Dockerfile  README.md  maintain.py  pyproject.toml  quickstart_demo.md  scrape.py  server.py  server_landing_page.py
.github/workflows/: docker-image.yml
assets/: README.md
db/: mcp_servers.md  mcp_servers.txt  server_list.db
db/faiss_index/: index.pkl
docs/: 404.html  index.html  index.txt
docs/_next/static/chunks/: 988-53c5aa8eff2fe461.js  webpack-341aa4a4d509aee2.js
docs/_next/static/chunks/app/: layout-1c12cbdf24a20658.js  page-61d31d3d06f7aadf.js
docs/_next/static/css/: d8c25a13c03140f8.css
scripts/: run_maintain.sh  run_update.sh
