[project]
name = "MCPDiscovery"
version = "0.2.0"
description = "MCP server that discovers MCP servers"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14",
    "fastmcp==2.6.1",
    "google-auth>=2.40.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "pygithub>=2.6.1",
    "requests>=2.32.4",
]
